Not part of Netscape 6.0 package. Checking in patches from toml@us.ibm.com. These fix bug 55508 (DOMParser does not work without script environment) and bug 55599 (add GetChannel method to nsIXMLHTTPRequest), as well as add a test program. r=heikki, a=vidur.